--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <title>Vedant Naik</title>
       <meta
         name="description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+        content="Fullstack Developer"
       />
       <meta name="robots" content="noodp" />
       <meta property="og:locale" content="en_US" />
@@ -21,27 +21,16 @@
       />
       <meta
         property="og:description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+        content="Fullstack Developer"
       />
-      <meta
-        property="og:site_name"
-        content="Front End Developer | Angular Expert - Freelancer"
-      />
-      <meta name="twitter:card" content="summary" />
-      <meta
-        name="twitter:description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-      />
-      <meta
-        name="twitter:title"
-        content="Front End Developer | Angular Expert - Freelancer"
-      />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
       <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Vedant Naik</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
